# youtube-summarizer

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  compose.yaml  pyproject.toml
docs/: RELATORIO.md  agent-runbook.md  architecture.md
src/: auth_chrome.py  auth_server.py  browser_session.py  cli.py  config.py  database.py  display_server.py  errors.py  gemini.py  json_log.py  models.py  profile_lock.py  workflow.py  youtube.py
src/yt_gemini/: __init__.py  __main__.py  artifacts.py  auth_chrome.py  auth_server.py  browser_session.py  cli.py  clock.py  config.py  database.py  display_server.py  errors.py  gemini.py  profile_lock.py  workflow.py  youtube.py
tests/: fakes.py  test_artifacts.py  test_auth_chrome.py  test_cli.py  test_config.py  test_database.py  test_display_server.py  test_gemini.py  test_profile_lock.py  test_workflow.py  test_youtube.py
